Improve error handling in AuthForm and API; add detailed error messages for various scenarios and implement response interceptor for better debugging.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "start": "npm run dev",
+    "start:pm2": "pm2 start ecosystem.config.js",
+    "start:pm2:prod": "NODE_ENV=production pm2 start ecosystem.config.js",
+    "stop:pm2": "pm2 stop ecosystem.config.js",
+    "restart:pm2": "pm2 restart ecosystem.config.js",
+    "logs:pm2": "pm2 logs",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
   "devDependencies": {
