--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start -H 0.0.0.0",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "node tests/run-tests.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
