feat(SectorCard): add production flow badges with hover details
Add new renderProductionFlowBadges function to display input/output badges with hover tooltips showing production metrics. Includes formatting helper function and handles overflow with "+n in/out" indicators. Replaces renderFlowBadges for production flows.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "start": "next start -H 0.0.0.0",
     "lint": "next lint",
-    "test": "node tests/run-tests.js"
+    "test": "node tests/run-tests.js && node tests/finance-tests.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -32,5 +32,4 @@
     "typescript": "^5.3.3"
   }
 }
-
 
