--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "migrate": "node scripts/migrate.js",
-    "test": "node tests/sector-calculator-tests.js"
+    "test": "node tests/sector-calculator-tests.js && node tests/market-consistency-tests.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
