fix: avatar upload + validation
- Fix Settings avatar upload 405 via explicit /api/profile/avatar route

- Standardize upload policy (2MB, jpeg/png/webp)

- Add admin users list endpoint

- Require corporation sector (400 on missing/empty)

- Update JWT handling in non-prod/test for Vitest

- Update /dev tracking + completion reports

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "extends": "next/core-web-vitals"
   },
   "scripts": {
-    "dev": "node -r ./next.config.js ./node_modules/next/dist/bin/next dev -H 0.0.0.0",
-    "build": "node -r ./next.config.js ./node_modules/next/dist/bin/next build",
-    "start": "node -r ./next.config.js ./node_modules/next/dist/bin/next start -H 0.0.0.0",
+    "dev": "next dev -H 0.0.0.0",
+    "build": "next build",
+    "start": "next start -H 0.0.0.0",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
@@ -32,11 +32,12 @@
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.26",
+    "isomorphic-dompurify": "^2.18.0",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.561.0",
     "mongodb": "^7.0.0",
     "multer": "^2.0.2",
-    "next": "^14.2.35",
+    "next": "^15.5.9",
     "node-cron": "^4.2.1",
     "rate-limiter-flexible": "^9.0.1",
     "react": "^18.2.0",
