feat(registration): add invite code support and stronger password validation
fix(portfolio): add null check for holdings length display
chore(gitignore): add frontend/.next and backend/dist to ignored paths
chore(deps): remove redundant peer flags from package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 # next.js
 /.next/
 /out/
+frontend/.next/
+backend/dist/
 
 # production
 /build
@@ -37,3 +39,4 @@ next-env.d.ts
 
 # Security
 .env
+.env2
