feat(theme): add bloomberg theme support to leaderboard
refactor(gameTime): make game time functions async with DB persistence

--- a/.env.example
+++ b/.env.example
@@ -111,6 +111,16 @@ NEXT_PUBLIC_API_URL=
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
 # ==================================
+# VERCEL CRON CONFIGURATION
+# ==================================
+
+# Secret for authenticating Vercel Cron requests
+# Vercel automatically sends this as Authorization header
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# REQUIRED if deploying to Vercel with cron jobs
+CRON_SECRET=your-cron-secret-replace-with-random-hex
+
+# ==================================
 # OPTIONAL FEATURES
 # ==================================
 
